# docana

./: .exrc  .gitignore  AbstractVectorizer.cpp  AbstractVectorizer.h  Bm25Vectorizer.cpp  Bm25Vectorizer.h  BowVectorizer.cpp  BowVectorizer.h  CMakeLists.txt  CorpusLoader.cpp  CorpusLoader.h  CosSimCalculator.cpp  CosSimCalculator.h  DocanaFacade.h  DocanaTest.cpp  DocanaTest.h  DocumentAnalyzer.cpp  DocumentAnalyzer.h  DocumentElement.h  DocumentSimilarity.cpp  DocumentSimilarity.h  DocumentVector.cpp  DocumentVector.h  DocumentsPair.h  Makefile  NounExtractor.cpp  NounExtractor.h  README.md  TextFileReader.cpp  TextFileReader.h  TextFileWriter.h  TfidfVectorizer.cpp  TfidfVectorizer.h  VectorizerFactory.cpp  VectorizerFactory.h  VectorizerUtility.cpp  VectorizerUtility.h  main.cpp  test.cpp  test.h
.github/workflows/: test.yml
docana/include/docana/: document_element.h  text_file_utility.h
docana/samples/: CMakeLists.txt
docana/src/: CMakeLists.txt  bm25_vectorizer.cc  bow_vectorizer.cc  dictionary_generator.cc
docana/test/: test.cc
include/docana/: bm25_vectorizer.h  bow_vectorizer.h  cosine_similarity_calculator.h  dictionary_generator.h  document_analyzer.h  document_element.h  noun_extractor.h  text_file_utility.h  tfidf_vectorizer.h  vector_utility.h  vectorizer.h  vectorizer_factory.h
res/: dict
sample/: CMakeLists.txt  sample.cc
sample/res/: 1.txt
samples/: dict.csv  sample.cc
samples/res/: 3.txt
src/: AbstractVectorizer.cc  Bm25Vectorizer.cc  BowVectorizer.cc  CMakeLists.txt  CorpusLoader.cc  DocanaTest.cc  DocumentElement.cc  DocumentsPair.cc  Makefile  NounExtractor.cc  TextFileReader.cc  TextFileWriter.cc  bm25_vectorizer.cc  bm25_vectorizer.h  bow_vectorizer.cc  bow_vectorizer.h  cosine_similarity_calculator.cc  cosine_similarity_calculator.h  dictionary_editor.cc  dictionary_editor.h  dictionary_generator.cc  dictionary_generator.h  document_analyzer.cc  document_analyzer.h  document_element.cc  documents_pair.cc  documents_pair.h  main.cc  noun_extractor.cc  noun_extractor.h  term_extractor.cc  term_extractor.h  test.cc  test.h  text_file_reader.cc  text_file_reader.h  text_file_utility.cc  text_file_utility.h  text_file_writer.cc  text_file_writer.h  (+5 more)
test/: 2.txt  CMakeLists.txt  bm25_vectorizer_test.cc  bow_vectorizer_test.cc  cat.txt  corpus_paths.txt  cosine_similarity_calculator_test.cc  dict.csv  dictionary_generator_test.cc  remon.txt  test.cc  tfidf_vectorizer_test.cc  vector_utility_test.cc  wagahaiwa_nekodearu.txt
test/res/: corpus_list
tool/: to_utf8_lf.sh
